Simple drawing app!

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <link href="./style/style.css" rel="stylesheet"> 
     </head>
     <body>
-        <h1>Yo, Adrian!</h1>
+        <div id='#appShell' class="gamecontainer"></div>
 
         <script src="https://code.jquery.com/jquery-3.6.1.min.js"
                 integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
